[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "meo-automation"
version = "0.1.0"
description = "Unattended Google Business Profile automation: posts, photos, review replies"
requires-python = ">=3.10"
dependencies = [
    # Google APIs
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.126",
    # LLM — Anthropic Claude used by default; swap in content.py TODO
    "anthropic>=0.28",
    # Config / utilities
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[project.scripts]
meo-run = "meo_automation.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
