[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meo-automation"
version = "0.1.0"
description = "Fully-automated Google Business Profile (MEO) tool for THE BODY / MYBEAR STUDIO"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.120.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# To use OpenAI instead of Anthropic: pip install "meo-automation[openai]"
# Then set llm.provider = "openai" in config/content.yaml.
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]

[project.scripts]
meo-run = "meo.main:main"
meo-status = "meo.tools.status:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
